--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,10 @@
     <link rel="icon" href="V.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <title>Viviana Davila</title>
+    <title>Viviana Davila | Los Angeles, CA</title>
     <meta
       name="description"
-      content="Viviana Davila is a Front-End Web Developer based in Los Angeles, CA, specializing in using ReactJS."
+      content="Viviana Davila is a Front-End Web Developer based in Los Angeles, CA, specializing in using ReactJS to build both simple mobile-responsive websites & dynamic web applications.."
     />
     <link rel="apple-touch-icon" href="V.png" />
   </head>
