--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <title>Viviana Davila | Los Angeles, CA</title>
     <meta
       name="description"
-      content="Viviana Davila is a Front-End Web Developer based in Los Angeles, CA, specializing in using ReactJS to build both simple mobile-responsive websites & dynamic web applications.."
+      content="Viviana Davila is a Front-End Web Developer based in Los Angeles, CA, specializing in using ReactJS to build web applications."
     />
     <link rel="apple-touch-icon" href="V.png" />
   </head>
